# AI-DLC

./: .env.example  AI-DLC-Framework.md  ARCHITECTURE.md  ARCHITECTURE_with_HARNESS.md  EXAMPLE_WITH_HARNESS.md  README.md  docker-compose.yml  pyproject.toml
adapters/: __init__.py  argocd.py  base.py  github.py  jira.py  semgrep.py  sentry.py  slack.py  snyk.py  syft_cosign.py  trivy.py  vault.py
agents/: __init__.py  base.py
agents/bugfix_agent/: agent.py
agents/cicd_agent/: agent.py
agents/code_agent/: agent.py
agents/coding_agent/: agent.py
agents/devops_agent/: agent.py
agents/document_agent/: agent.py
agents/feedback_agent/: agent.py
agents/intake_agent/: agent.py
agents/planning_agent/: agent.py
agents/pr_agent/: agent.py
agents/qa_agent/: agent.py
agents/review_agent/: agent.py
agents/test_agent/: agent.py
agents/testing_agent/: agent.py
agents/versioning_agent/: agent.py
backend/: __init__.py  main.py
backend/api/: rest.py  websocket.py
backend/api/webhooks/: github.py  jira.py  sentry.py  slack.py
backend/hit/: __init__.py  architectural_review.py  per_item_gates.py
backend/metrics/: collector.py  dora.py
backend/orchestrator/: conflict.py  engine.py  flow.py
backend/queues/: __init__.py  base.py  deployment.py  implementation.py  requirements.py  testing.py
config/: agents.yaml  model_routing.yaml
context/: __init__.py
context/knowledge_graph/: builder.py  client.py
context/project_spec/: loader.py
context/vector_store/: client.py
harness/: __init__.py  context_manager.py  model_router.py  resolver.py  runtime.py  safety_guardrails.py  skill_loader.py  tool_registry.py
infrastructure/docker/: Dockerfile.agent  Dockerfile.backend
infrastructure/github-actions/: ci.yml
orchestration/: graph.py
orchestration/webhooks/: github_webhook.py  jira_webhook.py  slack_webhook.py
project-spec/: README.md  apis.md  architecture.md  business_rules.md  compliance.md  data_models.md  glossary.md  performance_slas.md  testing_strategy.md
schemas/: __init__.py  agent_types.py  flow.py  human_gate.py  task_contract.py
shared/models/: llm_factory.py
shared/state/: ticket_state.py
shared/tools/: github_tool.py  jira_tool.py  sentry_tool.py  slack_tool.py  vault_tool.py
skills/: README.md  deployment_pipeline.md  implement_feature.md  incident_triage.md  requirements_parser.md  security_scan_review.md  test_generation.md
tests/agent_tests/: test_intake_agent.py
