[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-dlc"
version = "0.1.0"
description = "AI-Augmented Software Development Lifecycle Framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # LLM & orchestration
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",

    # API & web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",

    # Secrets
    "hvac>=2.3.0",              # HashiCorp Vault client
    "python-dotenv>=1.0.0",     # .env.local for local dev

    # Auth
    "PyJWT>=2.8.0",             # GitHub App JWT signing
    "cryptography>=42.0.0",

    # Data validation
    "pydantic>=2.7.0",

    # State persistence
    "redis>=5.0.0",

    # Config
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
